# frost-vector

./: .gitignore  Cargo.toml
src/: constants.rs  lib.rs  main.rs  math.rs  raw.rs  render_common.rs  renderer_1.rs  renderer_1_test.rs  renderer_2.rs  renderer_2_test.rs  renderer_test_triange.rs  statistics.rs  windowed_device.rs
src/shaders/: renderer_1_circle.wgsl  renderer_1_rectangle.wgsl  renderer_2_circle.wgsl  renderer_2_rectangle.wgsl
