[package]
name = "frost-vector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.2"
wgpu = "0.15"
winit = "0.27"
rand = "0.8.5"
notify = "6.0.0"
serde = { version = "1.0.189", features = ["derive", "serde_derive"] }
serde_json = "1.0.107"
csv = "1.3.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

